Consolidate workflows in config

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -49,10 +49,8 @@ workflows:
   version: 2
   main:
     jobs:
+      - build
       - test
-  release:
-    jobs:
-      - build:
       #    filters:
       #      branches:
       #        ignore: /.*/
