--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,20 +1,5 @@
 version: 2.1
 jobs:
-  test:
-    docker:
-      - image: circleci/golang:1.14
-    working_directory: ~/golang-example-app
-    steps:
-      - checkout
-      - run:
-          name: "Setup APP_WD"
-          command: echo 'export APP_WD="$(cd ${CIRCLE_WORKING_DIRECTORY}; pwd)/resources"' >> $BASH_ENV
-      - run:
-          name: Fetch dependencies
-          command: go mod download
-      - run:
-          name: Test
-          command: go test ./...
   build:
     docker:
       - image: circleci/golang:1.14
@@ -34,6 +19,23 @@ jobs:
           root: .
           paths:
             - bin
+  test:
+    docker:
+      - image: circleci/golang:1.14
+    parallelism: 11
+    working_directory: ~/golang-example-app
+    steps:
+      - checkout
+      - run:
+          name: "Setup APP_WD"
+          command: echo 'export APP_WD="$(cd ${CIRCLE_WORKING_DIRECTORY}; pwd)/resources"' >> $BASH_ENV
+      - run:
+          name: Fetch dependencies
+          command: go mod download
+      - run:
+          name: Test
+          command: go test ./... 
+
   publish-github-release:
     docker:
       - image: cibuilds/github:0.13
@@ -51,6 +53,8 @@ workflows:
     jobs:
       - build
       - test
+          requires:
+            - build
       #    filters:
       #      branches:
       #        ignore: /.*/
