--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -52,7 +52,7 @@ workflows:
   main:
     jobs:
       - build
-      - test
+      - test:
           requires:
             - build
       #    filters:
