--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,4 +1,8 @@
 version: 2.1
+
+orbs:
+  aws-ecr: circleci/aws-ecr@7.2.0
+
 jobs:
   build:
     docker:
@@ -51,10 +55,14 @@ workflows:
   version: 2
   main:
     jobs:
-      - build
-      - test:
-          requires:
-            - build
+      #- build
+      - aws-ecr/build-and-push-image:
+          account-url: 660990364978.dkr.ecr.ca-central-1.amazonaws.com/golang-repo
+          repo: golang-repo
+          tag: 'latest'
+      #- test:
+      #    requires:
+      #      - build
       #    filters:
       #      branches:
       #        ignore: /.*/
@@ -68,3 +76,14 @@ workflows:
       #        ignore: /.*/
       #      tags:
       #        only: /^v\d+\.\d+\.\d+.*/
+
+
+orbs:
+  aws-ecr: circleci/aws-ecr@7.2.0
+workflows:
+  build_and_push_image:
+    jobs:
+      - aws-ecr/build-and-push-image:
+          account-url: 660990364978.dkr.ecr.ca-central-1.amazonaws.com/golang-repo
+          repo: golang-repo
+          tag: 'latest'
