--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,6 +10,12 @@ jobs:
     steps:
     - checkout 
     - run: aws s3 ls
+    - run: |
+        aws ecr get-login-password --region ca-central-1 | docker login --username AWS --password-stdin 660990364978.dkr.ecr.ca-central-1.amazonaws.com
+        docker build -t golang-repo .
+        docker tag golang-repo:latest 660990364978.dkr.ecr.ca-central-1.amazonaws.com/golang-repo:latest
+        docker push 660990364978.dkr.ecr.ca-central-1.amazonaws.com/golang-repo:latest
+        
   build:
     docker:
       - image: circleci/golang:1.14
