--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,7 +9,7 @@ jobs:
     steps:
     - checkout 
     - run: aws --version 
-    #- run: aws ecr get-login-password --region ca-central-1 | docker login --username AWS --password-stdin 660990364978.dkr.ecr.ca-central-1.amazonaws.com
+    - run: aws ecr get-login-password --region ca-central-1 | docker login --username AWS --password-stdin 660990364978.dkr.ecr.ca-central-1.amazonaws.com
     #- run: docker build --no-cache -t golang-repo -f ./Dockerfile-dev .
     #- run: docker tag golang-repo:latest 660990364978.dkr.ecr.ca-central-1.amazonaws.com/golang-repo:latest
     #- run: docker push 660990364978.dkr.ecr.ca-central-1.amazonaws.com/golang-repo:latest
