--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -59,6 +59,35 @@ jobs:
       - run: npm install
       - run: npm test
 
+  deploy:
+    environment:
+      SERVER_IMAGE: 660990364978.dkr.ecr.ca-central-1.amazonaws.com/golang-repo:latest
+      CONTAINER_NAME: web-server
+    machine: true
+    resource_class: vijay/3x-linux-ec2
+    steps:
+      - checkout
+      #- add_ssh_keys:
+      #   fingerprints:
+      #     - "6c:21:38:86:88:27:bf:de:e4:a2:63:df:59:22:dc:ea"
+      - run: 
+          name: Deploy Docker Image
+          command: |
+             docker stop $CONTAINER_NAME || true && docker rm $CONTAINER_NAME || true
+             aws ecr get-login-password --region ca-central-1 | docker login --username AWS --password-stdin 660990364978.dkr.ecr.ca-central-1.amazonaws.com
+             docker pull $SERVER_IMAGE
+             docker container run -d --restart unless-stopped --name $CONTAINER_NAME -dit -p 8080:80 $SERVER_IMAGE
+      #- run: 
+      #    name: Deploy Docker Image
+      #    command: |
+      #       ssh $AWS_EC2_SSH \<< EOF
+      #       docker stop $CONTAINER_NAME || true && docker rm $CONTAINER_NAME || true
+      #       aws ecr get-login-password --region ca-central-1 | docker login --username AWS --password-stdin 660990364978.dkr.ecr.ca-central-1.amazonaws.com
+      #       docker pull $SERVER_IMAGE
+      #       docker container run -d --restart unless-stopped --name $CONTAINER_NAME -dit -p 8080:80 $SERVER_IMAGE
+      #       EOF
+            
+
 workflows:
   version: 2
   main:
