--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -93,7 +93,6 @@ workflows:
   main:
     jobs:
       - build
-      - deploy
       - test1:
           requires:
             - build
@@ -106,5 +105,13 @@ workflows:
       - test4:
           requires:
             - build
-      
-
+      - deploy:
+          requires:
+            - build
+            - test1
+            - test2
+            - test3
+            - test4  
+        
+  
+  
