--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,26 +1,15 @@
-# Use the latest 2.1 version of CircleCI pipeline process engine. See: https://circleci.com/docs/2.0/configuration-reference
 version: 2.1
+orbs:
+docker: circleci/docker@1.7.0
 jobs:
-  build:
-    working_directory: ~/repo
-    docker:
-      - image: circleci/golang:1.15.8
-    steps:
-      - checkout
-      - restore_cache:
-          keys:
-            - go-mod-v4-{{ checksum "go.sum" }}
-      - run:
-          name: Install Dependencies
-          command: go mod download
-      - save_cache:
-          key: go-mod-v4-{{ checksum "go.sum" }}
-          paths:
-            - "/go/pkg/mod"
-      - run:
-          name: Run tests
-          command: |
-            mkdir -p /tmp/test-reports
-            gotestsum --junitfile /tmp/test-reports/unit-tests.xml
-      - store_test_results:
-          path: /tmp/test-reports
+example-job:
+docker:
+- image: cimg/base:stable
+steps:
+- docker/pull:
+images: node
+- run: node --version
+workflows:
+example-workflow:
+jobs:
+- example-job
