--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,15 +1,16 @@
 version: 2.1
 orbs:
-docker: circleci/docker@1.7.0
+   docker: circleci/docker@1.7.0
 jobs:
-example-job:
-docker:
-- image: cimg/base:stable
-steps:
-- docker/pull:
-images: node
-- run: node --version
+  example-job:
+     docker:
+        - image: cimg/base:stable
+     steps:
+       - docker/pull:
+            images: cimg/node
+       - run: node --version
+
 workflows:
-example-workflow:
-jobs:
-- example-job
+   example-workflow:
+      jobs:
+        - example-job
